removing .env file and adding it to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /localhost-ssl
 node_modules
 
-./client/node_modules 
+./client/node_modules
 ./client/.pnp
 ./client/.pnp.js
 
@@ -24,3 +24,5 @@ node_modules
 ./client/npm-debug.log*
 ./client/yarn-debug.log*
 ./client/yarn-error.log*
+
+.env
