--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
 		"client": "cd client && yarn start",
 		"server": "cd src/server && nodemon server.js",
 		"dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-		"test": "cd server && jest",
-		"test:watch": "cd server && jest --watch",
+		"test": "jest",
+		"test:watch": "cd tests && jest --watch",
 		"start": "cd server && node server.js"
+	},
+	"jest": {
+		"globalSetup": "<rootDir>/tests/setup.js",
+		"globalTeardown": "<rootDir>/tests/teardown.js",
+		"setupFilesAfterEnv": [
+			"dotenv/config"
+		],
+		"testEnvironment": "node",
+		"transform": {}
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.1",
@@ -16,7 +25,6 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"jest": "^24.9.0",
 		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2",
 		"knex": "^3.1.0",
@@ -35,6 +43,7 @@
 		"eslint-plugin-prettier": "^5.2.3",
 		"eslint-plugin-promise": "^6.6.0",
 		"eslint-plugin-standard": "^5.0.0",
+		"jest": "^29.7.0",
 		"prettier": "^3.5.1"
 	}
 }
